plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.dna'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    //implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    //implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'mysql:mysql-connector-java:8.0.33'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'com.h2database:h2'
    implementation 'org.springframework.boot:spring-boot-starter'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//    implementation 'com.h2database:h2'
//    implementation 'org.springframework.boot:spring-boot-starter'
//    compileOnly 'org.projectlombok:lombok'
//    runtimeOnly 'com.mysql:mysql-connector-j'
//    annotationProcessor 'org.projectlombok:lombok'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}


tasks.named('test') {
    useJUnitPlatform()
}

//plugins {
//    id 'java'
//    id 'org.springframework.boot' version '3.0.0'
//    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
//}
//
//group = 'com.example'
//version = '1.0.0'
//sourceCompatibility = '17'
//
//repositories {
//    mavenCentral()
//}
//
//dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'  // Hibernate 6.0.2 이상
//    implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
//
//    // queryDSL
//    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
//    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
//    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
//    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
//
//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
//    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
//    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
//
//
//    compileOnly 'org.projectlombok:lombok:1.18.22'
//    annotationProcessor 'org.projectlombok:lombok:1.18.22'
//
//    implementation 'org.hibernate:hibernate-core:5.6.9.Final'
//
//    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
//    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
//
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//}
//
//sourceSets {
//    main {
//        java {
//            srcDirs = ['src/main/java', 'src/main/resources']
//        }
//    }
//}
//
//tasks.named('test') {
//    useJUnitPlatform()
//}
//
//// Querydsl 설정부
//def generated = 'src/main/generated'
//
//querydsl {
//    jpa = true
//    querydslSourcesDir = generated
//}
//sourceSets {
//    main.java.srcDir generated
//}
//
//compileQuerydsl{
//    options.annotationProcessorPath = configurations.querydsl
//}
//
//configurations {
//    compileOnly {
//        extendsFrom annotationProcessor
//    }
//    querydsl.extendsFrom compileClasspath
//}

//plugins {
//    id 'java'
//    id 'org.springframework.boot' version '3.0.0'
//    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
//}
//// Querydsl 설정부
//def querydslDir = "$buildDir/generated/querydsl"
//
//querydsl {
//    jpa = true
//    querydslSourcesDir = querydslDir
//}
//
//sourceSets {
//    main.java.srcDirs querydslDir
//}
//
////tasks.withType(JavaCompile) {
////    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
////}
//
//compileQuerydsl{
//    options.annotationProcessorPath = configurations.querydsl
//}
//
//
//configurations {
//    compileOnly {
//        extendsFrom annotationProcessor
//    }
//    querydsl.extendsFrom compileClasspath
//}
//
//group = 'com.example'
//version = '1.0.0'
//sourceCompatibility = '17'
//
//repositories {
//    mavenCentral()
//}
//
//
//dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    //implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'  // Hibernate 6.0.2 이상
//    implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
//
//    // queryDSL
//    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
//    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
//    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
//    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
//
////    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
////    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
////    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
//
//
//    compileOnly 'org.projectlombok:lombok:1.18.22'
//    annotationProcessor 'org.projectlombok:lombok:1.18.22'
//
//    implementation 'org.hibernate:hibernate-core:5.6.9.Final'
//
//    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
//    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
//
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//}
//
//clean {
//    delete fileTree(dir: 'src/main/generated', include: '**/*.java')
//}
//
////tasks.withType(JavaCompile) {
////    options.compilerArgs += [
////            '--add-opens',
////            'java.base/java.lang=ALL-UNNAMED',
////            '--add-opens',
////            'java.base/java.util=ALL-UNNAMED'
////    ]
////}
//
//
////sourceSets {
////    main {
////        java {
////            srcDirs = ['src/main/java', 'src/main/resources', 'src/main/generated']
////        }
////    }
////}
//
//tasks.named('test') {
//    useJUnitPlatform()
//}
//
////sourceSets {
////    main.java.srcDir generated
////}
